--- a/src/pages/onboard/storytelling/Step2/step2.module.css
+++ b/src/pages/onboard/storytelling/Step2/step2.module.css
@@ -72,7 +72,7 @@
   left: 50%;
   transform: translate(-50%, -50%);
   color: white;
-  font-family: var(font-knewave);
+  font-family: var(--font-knewave);
   font-size: clamp(1.4rem, 2.4vw, 2.2rem);
   white-space: nowrap;
   text-align: center;
@@ -86,7 +86,7 @@
   top: 50%;
   left: 50%;
   font-size: 3rem;
-  font-family: var(font-knewave);
+  font-family: var(--font-knewave);
 }
 
 /*  BRØDTEKST  */
@@ -98,7 +98,7 @@
   max-width: 360px;
 
   color: white;
-  font-family: var(font-hel-light);
+  font-family: var((--font-hel-light);
   font-size: 1.5rem;
   line-height: 1.35;
 }
@@ -126,7 +126,7 @@
   color: white;
   font-size: 4rem;
   opacity: 0;
-  font-family: var(font-knewave);
+  font-family: var((--font-knewave);
   text-transform: uppercase;
 }
 
@@ -163,7 +163,7 @@
   text-align: center;
   color: white;
   font-size: 3.5rem;
-  font-family: var(font-knewave);
+  font-family: var(--font-knewave);
   text-transform: uppercase;
   margin-bottom: 20px;
 }
@@ -175,7 +175,7 @@
 
 .outro p {
   color: white;
-  font-family: var(font-hel-light);
+  font-family: var(--font-hel-light);
   font-size: 1.5rem;
   text-align: center;
   max-width: 640px;
