--- a/src/pages/onboard/storytelling/Step5/step5.module.css
+++ b/src/pages/onboard/storytelling/Step5/step5.module.css
@@ -4,7 +4,7 @@
   width: 100%;
   height: 100vh;
   overflow: hidden;
-  background-color: var(taupe);
+  background-color: var(--taupe);
 }
 
 /*  INNER WRAPPER  */
@@ -104,10 +104,10 @@
 /*  OVERLAY TEXT  */
 .centerOverlayLine {
   margin: 2px 0;
-  font-family: var(font-knewave);
+  font-family: var(--font-knewave);
   font-size: 18px;
   text-transform: uppercase;
-  color: var(tomato);
+  color: var(--tomato);
   white-space: nowrap;
   letter-spacing: 0.05em;
 }
